# HadesStsAlignment

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: FindHYDRA.cmake  dev-mode.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  hades_basic_example.cpp
source/: lib.cpp  lib.hpp  main.cpp  param_updater.cpp  straw_residual_model.hpp
source/hydra/: Makefile.in  hforwardaligner.cc  hforwardaligner.h
test/: CMakeLists.txt
test/source/: HadesStsAlignment_test.cpp  test_derivatives.cpp  test_straw_residuals_model.cpp
